--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,9 @@
 *,
 *::before,
 *::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 h1,
@@ -13,286 +13,406 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
+  margin: 0;
 }
 
 ul,
 ol {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 span,
 a {
-    display: inline-block;
-    text-decoration: none;
+  display: inline-block;
+  text-decoration: none;
 }
 
 button {
-    padding: 0;
-    margin: 0;
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
 }
 
 body {
-    font-family: 'Roboto';
-    overflow-x: hidden;
+  font-family: 'Roboto';
+  overflow-x: hidden;
 }
 
 .container {
-    max-width: 1240px;
-    margin: 0 auto;
+  max-width: 1240px;
+  margin: 0 auto;
 }
 
 .product-section {
-    max-width: 80%;
-    margin: 0 auto;
+  max-width: 80%;
+  margin: 0 auto;
 
-    #product-card {
-        display: flex;
-        justify-content: space-between;
+  #product-card {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .product {
+    // display: flex;
+    flex-direction: column;
+  }
+
+  .product-header {
+    width: fit-content;
+    position: relative;
+
+    .btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      z-index: 2;
+      background: none;
+      border: none;
+      cursor: pointer;
     }
 
-    .product {
-        // display: flex;
-        flex-direction: column;
+    .btn > img {
+      width: 20px;
+      height: 20px;
     }
 
-    .product-header {
-        width: fit-content;
-        position: relative;
-
-        .btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            z-index: 2;
-            background: none;
-            border: none;
-            cursor: pointer;
-        }
-
-        .btn>img {
-            width: 20px;
-            height: 20px;
-        }
-
-        .product-badge {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            font-weight: 500;
-            font-size: 13px;
-            line-height: 21px;
-            vertical-align: middle;
-            padding: 0 6px;
-            background-color: #6610F5;
-            color: white;
-            border-radius: 4px;
-        }
-
-
-        .product-image {
-            width: 232px;
-            height: 309px;
-        }
-
-        .product-image img {
-            width: 100%;
-            height: 100%;
-            display: block;
-        }
+    .product-badge {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      font-weight: 500;
+      font-size: 13px;
+      line-height: 21px;
+      vertical-align: middle;
+      padding: 0 6px;
+      background-color: #6610f5;
+      color: white;
+      border-radius: 4px;
     }
 
-    .product-body {
-        max-width: 232px;
-
+    .product-image {
+      width: 232px;
+      height: 309px;
     }
 
-    .product-info {
-        max-width: 216px;
-        margin-inline: auto;
-        margin-top: 12px;
-        margin-bottom: 17.3px;
-
-        .product-title {
-            font-weight: 400;
-            font-size: 12.8px;
-            line-height: 15.36px;
-            vertical-align: middle;
-        }
+    .product-image img {
+      width: 100%;
+      height: 100%;
+      display: block;
     }
+  }
 
-    .product-rating {
-        margin-top: 4px;
-        margin-bottom: 6px;
+  .product-body {
+    max-width: 232px;
+  }
+
+  .product-info {
+    max-width: 216px;
+    margin-inline: auto;
+    margin-top: 12px;
+    margin-bottom: 17.3px;
+
+    .product-title {
+      font-weight: 400;
+      font-size: 12.8px;
+      line-height: 15.36px;
+      vertical-align: middle;
     }
+  }
 
-    .product-rating img {
-        width: 14px;
-        height: 14px;
-    }
+  .product-rating {
+    margin-top: 4px;
+    margin-bottom: 6px;
+  }
 
-    .product-rating span {
-        font-weight: 300;
-        font-size: 11.2px;
-        line-height: 11.2px;
-        vertical-align: middle;
-        color: #8C8E98;
-    }
+  .product-rating img {
+    width: 14px;
+    height: 14px;
+  }
 
-    .product-monthly {
+  .product-rating span {
+    font-weight: 300;
+    font-size: 11.2px;
+    line-height: 11.2px;
+    vertical-align: middle;
+    color: #8c8e98;
+  }
+
+  .product-monthly {
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 17px;
+    vertical-align: middle;
+    color: #1f1f25;
+    background-color: #ffff54;
+    padding: 2px 5px;
+    border-radius: 4px;
+  }
+
+  .product-footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 8px;
+
+    .product-price {
+      display: flex;
+      flex-direction: column;
+
+      .old-price {
         font-weight: 400;
-        font-size: 11px;
-        line-height: 17px;
+        font-size: 11.2px;
+        line-height: 13.44px;
         vertical-align: middle;
-        color: #1F1F25;
-        background-color: #FFFF54;
-        padding: 2px 5px;
-        border-radius: 4px;
+        text-decoration: line-through;
+        color: #8c8e98;
+      }
+
+      .new-price {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 16.8px;
+        vertical-align: middle;
+      }
     }
 
-    .product-footer {
-        display: flex;
-        justify-content: space-between;
-        padding: 0 8px;
-
-        .product-price {
-            display: flex;
-            flex-direction: column;
-
-            .old-price {
-                font-weight: 400;
-                font-size: 11.2px;
-                line-height: 13.44px;
-                vertical-align: middle;
-                text-decoration: line-through;
-                color: #8C8E98;
-            }
-
-            .new-price {
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 16.8px;
-                vertical-align: middle;
-
-            }
-        }
-
-        .add-to-cart {
-            padding: 4px;
-            box-shadow: 0px 0px 0px 1px #36363F33 inset;
-            border-radius: 50px;
-            cursor: pointer;
-        }
+    .add-to-cart {
+      padding: 4px;
+      box-shadow: 0px 0px 0px 1px #36363f33 inset;
+      border-radius: 50px;
+      cursor: pointer;
     }
+  }
 }
 
-
-
-
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .header-top {
-    margin-top: 10px;
-    background-color: #F2F4F7;
-    .header-top__left {
-        display: flex;
-        justify-content: space-between;
+  padding: 0 140px;
+  padding-top: 10px;
+  background-color: #f2f4f7;
+  .header-top__left {
+    display: flex;
+    justify-content: space-between;
 
-        .header-top__location {
-            display: flex;
-            gap: 24px;
+    .header-top__location {
+      display: flex;
+      gap: 24px;
 
-            .pickup-link {
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 14px;
-                vertical-align: middle;
-                color: #1F2025;
-            }
-        }
-
-        .location-info {
-            display: flex;
-
-            & img {
-                width: 12px;
-                height: 15px;
-                margin-right: 6px;
-            }
-
-            & span {
-                font-weight: 400;
-                font-size: 14px;
-                line-height: 14px;
-                vertical-align: middle;
-                color: #1F2026;
-            }
-
-            & a {
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 14px;
-                vertical-align: middle;
-                text-decoration: underline;
-                color: #1F2025;
-            }
-        }
-
-        .header-top__delivery {
-            & p {
-                font-weight: 400;
-                font-size: 14px;
-                line-height: 14px;
-                text-align: center;
-                vertical-align: middle;
-                color: #8B8E99;
-            }
-        }
-
-        .header-top__links {
-            display: flex;
-            gap: 26px;
-            .faq-link {
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 14px;
-                vertical-align: middle;
-                color: #595B66;
-                margin-right: 15.62px;
-            }
-
-            .orders-link {
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 14px;
-                vertical-align: middle;
-                color: #595B66;
-            }
-
-            .header-top__right {
-                display: flex;
-                gap: 5.73px;
-                .lang-flag{
-                    height: 20px;
-                }
-                .lang-flag>img {
-                    cursor: pointer;
-                    width: 20px;
-                    height: 20px;
-                }
-
-                .lang-text {
-                    font-weight: 500;
-                    font-size: 14px;
-                    text-align: center;
-                    vertical-align: middle;
-
-                }
-            }
-        }
+      .pickup-link {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 14px;
+        vertical-align: middle;
+        color: #1f2025;
+      }
     }
 
+    .location-info {
+      display: flex;
+
+      & img {
+        width: 12px;
+        height: 15px;
+        margin-right: 6px;
+      }
+
+      & span {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 14px;
+        vertical-align: middle;
+        color: #1f2026;
+      }
+
+      & a {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 14px;
+        vertical-align: middle;
+        text-decoration: underline;
+        color: #1f2025;
+      }
+    }
+
+    .header-top__delivery {
+      & p {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 14px;
+        text-align: center;
+        vertical-align: middle;
+        color: #8b8e99;
+      }
+    }
+
+    .header-top__links {
+      display: flex;
+      gap: 26px;
+      .faq-link {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 14px;
+        vertical-align: middle;
+        color: #595b66;
+        margin-right: 15.62px;
+      }
+
+      .orders-link {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 14px;
+        vertical-align: middle;
+        color: #595b66;
+      }
+
+      .header-top__right {
+        display: flex;
+        gap: 5.73px;
+        .lang-flag {
+          height: 20px;
+        }
+        .lang-flag > img {
+          cursor: pointer;
+          width: 20px;
+          height: 20px;
+        }
+
+        .lang-text {
+          font-weight: 500;
+          font-size: 14px;
+          text-align: center;
+          vertical-align: middle;
+        }
+      }
+    }
+  }
+}
+.header-bottom {
+  padding: 0 140px;
+  background-color: #ffffff;
+  padding-top: 18px;
+  .logo{
+    width: 200px;
+    height: 32px;
+    & > img {
+        width: 100%;
+        height: 100%;
+    }
+  }
+  .header-bottom__top {
+    display: flex;
+    .search-section {
+      display: flex;
+      gap: 7px;
+      .catalog-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 7.98px;
+        background-color: #f0f0fe;
+        padding: 8px 18px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: center;
+        vertical-align: middle;
+        color: #7000ff;
+        border-radius: 4px;
+      }
+    }
+    .header-bottom__left {
+      display: flex;
+    }
+  }
+}
+.search-box {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  & > input {
+    width: 448px;
+    border: 1px solid black;
+    border-right: none;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    padding-left: 16.62px;
+    &:active {
+        border: none;
+    }
+    .search-wrapper {
+    }
+  }
+}
+
+.search-wrapper {
+  display: flex;
+  align-items: center;
+  width: 480px;
+  height: 40px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.search-input {
+  flex: 1;
+  height: 100%;
+  border: none;
+  outline: none;
+  padding: 0 12px;
+  font-size: 14px;
+  color: #333;
+}
+
+.search-btn {
+  width: 45px;
+  height: 100%;
+  border: none;
+  background-color: #f6f6f6;
+  border-left: 1px solid #ddd;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s;
+  padding: 8px 27.19px;
+  border: 1px solid black;
+  border-left: none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.search-btn:hover {
+  background-color: #ececec;
+}
+
+.search-btn img {
+  width: 18px;
+  height: 18px;
+}
+.header-bottom__right {
+  display: flex;
+  .login,
+  .favorites,
+  .cart {
+    margin-left: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12.68px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    text-align: center;
+    vertical-align: middle;
+    color: #1F2026;
+  }
 }
