--- a/css/style.scss
+++ b/css/style.scss
@@ -49,7 +49,7 @@ body {
 .product-section {
   max-width: 80%;
   margin: 0 auto;
-
+  margin-top: 48px;
   #product-card {
     display: flex;
     justify-content: space-between;
@@ -191,6 +191,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 14px;
 }
 .header-top {
   padding: 0 140px;
@@ -343,12 +344,6 @@ body {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     padding-left: 16.62px;
-
-    &:active {
-      border: none;
-    }
-    .search-wrapper {
-    }
   }
 }
 
@@ -587,22 +582,189 @@ body {
       height: 38px;
       padding: 7px 14px;
       text-decoration: none;
-      transition: all .1s linear;
+      transition: all 0.1s linear;
     }
     .favorite-card__btn:hover {
       background-color: #7f4dff;
     }
   }
 }
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #444;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .modal {
   display: none;
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.55);
+  background: rgba(0, 0, 0, 0.55);
   justify-content: center;
   align-items: center;
   z-index: 1000;
 }
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  display: none;
+}
+.swiper-button-next img,
+.swiper-button-prev img {
+  background: #f2f4f7;
+  border: 1px solid #36363f;
+  cursor: pointer;
+  padding-block: 11.25px;
+  padding-left: 14px;
+  padding-right: 16px;
+  opacity: 50%;
+  border-radius: 50px;
+}
+.swiper-button-prev,
+.swiper-rtl .swiper-button-next {
+  left: 16px;
+}
+.swiper-button-next,
+.swiper-rtl .swiper-button-prev {
+  right: 16px;
+}
+.swiper-pagination-bullet-active {
+  background-color: gray;
+}
+.mySwiper {
+  border-radius: 18px;
+}
+
+.product-name {
+  margin-bottom: 21px;
+  .info {
+    display: flex;
+    align-items: center;
+    gap: 16.5px;
+    .title-h1 {
+      font-weight: 700;
+      font-size: 28px;
+      line-height: 36px;
+      vertical-align: middle;
+      color: #1f2025;
+    }
+    .info-arrow {
+      // width: 9px;
+      // height: 14.25px;
+      cursor: pointer;
+      padding: 10.87px 13.5px;
+      border-radius: 50px;
+    }
+  }
+}
+
+// FOOTER qism
+.footer {
+  margin-top: 52px;
+  .footer__top {
+    margin-bottom: 72.8px;
+  }
+  .footer__links {
+    display: flex;
+    justify-content: space-between;
+    .footer__column {
+      display: flex;
+      flex-direction: column;
+      .footer__title {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 19px;
+        vertical-align: middle;
+        color: #1f2025;
+        margin-bottom: 16px;
+      }
+      .footer__item {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        vertical-align: middle;
+        color: #8b8e99;
+        margin-bottom: 19px;
+      }
+      .footer__apps {
+        display: flex;
+        align-items: center;
+      }
+      .footer__app-link {
+        gap: 5px;
+      }
+      .AppStore {
+        margin-inline: 29px;
+      }
+      .footer__apps > a {
+        font-weight: 500;
+        font-size: 12.8px;
+        line-height: 15.36px;
+        vertical-align: middle;
+        color: #1f2025;
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
+  .footer__socials {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: 43px;
+
+    .footer__title {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 18px;
+      vertical-align: middle;
+      color: #1f2025;
+      margin-bottom: 16px;
+    }
+    .footer__icon {
+      width: 32px;
+      height: 32px;
+      margin-top: 16px;
+    }
+  }
+  .footer__bottom {
+    display: flex;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    border-top: 1px solid black;
+    justify-content: space-between;
+    .footer__policies {
+      .footer__policy-link {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 18px;
+        vertical-align: middle;
+        color: #1f2025;
+      }
+    }
+    .footer__copy {
+      font-weight: 400;
+      font-size: 11px;
+      line-height: 14px;
+      vertical-align: middle;
+      color: #8C8E98;
+    }
+  }
+}
+// FOOTER tugashi
 
 /* Modal oynaning o‘zi */
 .modal__content {
@@ -610,7 +772,7 @@ body {
   border-radius: 16px;
   padding: 32px 24px;
   width: 360px;
-  box-shadow: 0 5px 20px rgba(0,0,0,0.15);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
   text-align: center;
   position: relative;
   animation: fadeIn 0.3s ease;
@@ -689,6 +851,12 @@ body {
 
 /* Fade animatsiya */
 @keyframes fadeIn {
-  from { opacity: 0; transform: scale(0.9); }
-  to { opacity: 1; transform: scale(1); }
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
