--- a/css/style.scss
+++ b/css/style.scss
@@ -42,7 +42,7 @@ body {
 }
 
 .container {
-  max-width: 1240px;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
@@ -330,6 +330,7 @@ body {
     }
     .header-bottom__left {
       display: flex;
+      align-items: center;
     }
   }
 }
@@ -344,7 +345,51 @@ body {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     padding-left: 16.62px;
+    outline: none;
   }
+}
+.lang-select {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.lang-current {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 14px;
+  color: #333;
+}
+
+.lang-options {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background: #fff;
+  border-radius: 6px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+  display: none;
+  min-width: 120px;
+  margin-top: 5px;
+  z-index: 10;
+}
+
+.lang-options div {
+  padding: 8px 12px;
+  color: #333;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.lang-options div:hover {
+  background: #f3f3f3;
+}
+
+.lang-select.active .lang-options {
+  display: block;
 }
 
 .search-wrapper {
@@ -703,12 +748,20 @@ body {
       .footer__apps {
         display: flex;
         align-items: center;
+        margin-left: -12px;
       }
       .footer__app-link {
         gap: 5px;
       }
       .AppStore {
-        margin-inline: 29px;
+        margin-right: 14px;
+      }
+      .footer__app-img {
+        width: 24px;
+        height: 24px;
+      }
+      .Apple-Logo {
+        width: 40px;
       }
       .footer__apps > a {
         font-weight: 500;
@@ -738,6 +791,7 @@ body {
       width: 32px;
       height: 32px;
       margin-top: 16px;
+      cursor: pointer;
     }
   }
   .footer__bottom {
@@ -747,6 +801,8 @@ body {
     border-top: 1px solid black;
     justify-content: space-between;
     .footer__policies {
+      display: flex;
+      gap: 15.9px;
       .footer__policy-link {
         font-weight: 500;
         font-size: 14px;
@@ -760,8 +816,12 @@ body {
       font-size: 11px;
       line-height: 14px;
       vertical-align: middle;
-      color: #8C8E98;
+      color: #8c8e98;
     }
+  }
+  .footer__icons {
+    display: flex;
+    gap: 5px;
   }
 }
 // FOOTER tugashi
